--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,31 +1,5 @@
-eureka:
-  client:
-    register-with-eureka: false
-server:
-  port: 8222
 spring:
+  config:
+    import: optional:configserver:http://localhost:8888
   application:
     name: gateway
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-      routes:
-        - id: onboarding
-          uri: http://localhost:8090
-          predicates:
-            - Path=/api/v1/onboarding/**
-        - id: billing
-          uri: http://localhost:8070
-          predicates:
-            - Path=/api/v1/billing/**
-        - id: authService
-          uri: http://localhost:8070
-          predicates:
-            - Path=/api/v1/billing/**
-
-management:
-  tracing:
-    sampling:
-      probability: 1.0
